--- a/imgui.ini
+++ b/imgui.ini
@@ -23,3 +23,13 @@ Pos=59,25
 Size=389,222
 Collapsed=0
 
+[Window][Fence]
+Pos=60,60
+Size=110,54
+Collapsed=0
+
+[Window][fence]
+Pos=9,-7
+Size=422,263
+Collapsed=0
+
