--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=306,119
 Collapsed=0
 
 [Window][Camera3D]
-Pos=790,42
-Size=103,123
+Pos=880,18
+Size=395,123
 Collapsed=0
 
 [Window][Plane]
@@ -31,5 +31,10 @@ Collapsed=0
 [Window][fence]
 Pos=12,9
 Size=460,216
+Collapsed=0
+
+[Window][particle]
+Pos=47,38
+Size=398,190
 Collapsed=0
 
