--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=306,119
 Collapsed=0
 
 [Window][Camera3D]
-Pos=841,16
-Size=395,123
+Pos=868,264
+Size=390,123
 Collapsed=0
 
 [Window][Plane]
@@ -36,5 +36,10 @@ Collapsed=0
 [Window][particle]
 Pos=840,153
 Size=424,213
+Collapsed=0
+
+[Window][sphere]
+Pos=868,19
+Size=390,241
 Collapsed=0
 
