--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=306,119
 Collapsed=0
 
 [Window][Camera3D]
-Pos=869,288
-Size=390,123
+Pos=6,9
+Size=390,127
 Collapsed=0
 
 [Window][Plane]
@@ -39,7 +39,17 @@ Size=424,213
 Collapsed=0
 
 [Window][sphere]
-Pos=871,19
-Size=387,259
+Pos=10,359
+Size=385,218
+Collapsed=0
+
+[Window][terrain]
+Pos=8,143
+Size=390,216
+Collapsed=0
+
+[Window][PointLight]
+Pos=403,13
+Size=313,101
 Collapsed=0
 
