--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=306,119
 Collapsed=0
 
 [Window][Camera3D]
-Pos=6,9
+Pos=8,12
 Size=390,127
 Collapsed=0
 
@@ -51,5 +51,10 @@ Collapsed=0
 [Window][PointLight]
 Pos=403,13
 Size=313,101
+Collapsed=0
+
+[Window][SpotLight]
+Pos=722,12
+Size=299,100
 Collapsed=0
 
