.hをLight用の作った

--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -275,6 +275,9 @@
     <ClInclude Include="3D\Particle\Particle.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="DXLib\PunctualLight\PunctualLight.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="Externals\imgui\LICENSE.txt" />
