--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=306,119
 Collapsed=0
 
 [Window][Camera3D]
-Pos=-5,11
+Pos=19,17
 Size=390,127
 Collapsed=0
 
@@ -56,5 +56,10 @@ Collapsed=0
 [Window][SpotLight]
 Pos=708,14
 Size=383,171
+Collapsed=0
+
+[Window][plane]
+Pos=20,147
+Size=395,147
 Collapsed=0
 
