--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=647,66
-Size=550,680
+Pos=492,100
+Size=704,256
 Collapsed=0
 
 [Window][Camera]
@@ -14,7 +14,7 @@ Size=306,119
 Collapsed=0
 
 [Window][Camera3D]
-Pos=19,17
+Pos=90,90
 Size=390,127
 Collapsed=0
 
@@ -61,5 +61,25 @@ Collapsed=0
 [Window][plane]
 Pos=20,147
 Size=388,147
+Collapsed=0
+
+[Window][teapot]
+Pos=206,254
+Size=392,592
+Collapsed=0
+
+[Window][Delete?]
+Pos=484,307
+Size=311,105
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=61,60
+Size=353,694
+Collapsed=0
+
+[Window][Setting]
+Pos=73,29
+Size=419,323
 Collapsed=0
 
