--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
 Pos=60,60
-Size=400,400
+Size=410,313
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -59,8 +59,8 @@ Size=383,171
 Collapsed=0
 
 [Window][plane]
-Pos=20,147
-Size=388,147
+Pos=58,186
+Size=370,145
 Collapsed=0
 
 [Window][teapot]
@@ -81,5 +81,10 @@ Collapsed=0
 [Window][Setting]
 Pos=73,29
 Size=419,323
+Collapsed=0
+
+[Window][3DCamera]
+Pos=60,60
+Size=367,124
 Collapsed=0
 
