--- a/imgui.ini
+++ b/imgui.ini
@@ -59,8 +59,8 @@ Size=383,171
 Collapsed=0
 
 [Window][plane]
-Pos=58,186
-Size=370,145
+Pos=24,140
+Size=367,148
 Collapsed=0
 
 [Window][teapot]
@@ -84,7 +84,12 @@ Size=419,323
 Collapsed=0
 
 [Window][3DCamera]
-Pos=60,60
-Size=367,124
+Pos=24,15
+Size=367,118
+Collapsed=0
+
+[Window][triangle]
+Pos=4,117
+Size=371,148
 Collapsed=0
 
