--- a/imgui.ini
+++ b/imgui.ini
@@ -60,7 +60,7 @@ Collapsed=0
 
 [Window][plane]
 Pos=24,140
-Size=367,148
+Size=368,175
 Collapsed=0
 
 [Window][teapot]
@@ -91,5 +91,10 @@ Collapsed=0
 [Window][triangle]
 Pos=4,117
 Size=371,148
+Collapsed=0
+
+[Window][gs]
+Pos=60,60
+Size=359,148
 Collapsed=0
 
