Texture周りめっちゃバグってる

--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClCompile Include="3D\Particle\Particle.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Managers\ConstBufferManager\ConstBufferManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Base\DXCommon\DXCommon.h">
@@ -276,6 +279,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="DXLib\PunctualLight\PunctualLight.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Managers\ConstBufferManager\ConstBufferManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
