--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -54,7 +54,7 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <BufferSecurityCheck>true</BufferSecurityCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)/Scenes/GameScene;$(ProjectDir)/Scenes/IScene;$(ProjectDir)/2D/Object2D;$(ProjectDir)/2D/Sprite;$(ProjectDir)/3D/Particle;$(ProjectDir)/3D/Model;$(ProjectDir)/3D/Mesh;$(ProjectDir)/3D/Object3D;$(ProjectDir)/Managers/ModelManager;$(ProjectDir)/Managers/TextureManager;$(ProjectDir)/Managers/SceneManager;$(ProjectDir)/Managers/PipelineManager;$(ProjectDir)/Managers/ImGuiManager;$(ProjectDir)/Lib/Camera2D;$(ProjectDir)/Lib/Camera3D;$(ProjectDir)/Lib/Matrix;$(ProjectDir)/Lib/Vector;$(ProjectDir)/Lib/ComPtr;$(ProjectDir)/Lib/Logger;$(ProjectDir)/DXLib/PunctualLight;$(ProjectDir)/DXLib/VertexResource;$(ProjectDir)/DXLib/CBufferStructure;$(ProjectDir)/DXLib/DXDepthStencil;$(ProjectDir)/DXLib/DXRasterizerState;$(ProjectDir)/DXLib/DXBlendState;$(ProjectDir)/DXLib/DXInputLayout;$(ProjectDir)/DXLib/DXRootSignature;$(ProjectDir)/DXLib/DXSwapChain;$(ProjectDir)/DXLib/DXDescriptor;$(ProjectDir)/DXLib/DXInclude;$(ProjectDir)/DXLib/DXDevice;$(ProjectDir)/DXLib/DXObject;$(ProjectDir)/Base/Object;$(ProjectDir)/Base/Engine;$(ProjectDir)/Base/DXCommon;$(ProjectDir)/Base/WinApp;$(ProjectDir)/Externals/assimp/include;$(ProjectDir)/Externals/DirectXTex;$(ProjectDir)/Externals/imgui</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)/Scenes/GameScene;$(ProjectDir)/Scenes/IScene;$(ProjectDir)/2D/Object2D;$(ProjectDir)/2D/Sprite;$(ProjectDir)/3D/Particle;$(ProjectDir)/3D/Model;$(ProjectDir)/3D/Mesh;$(ProjectDir)/3D/Object3D;$(ProjectDir)/Managers/ConstBufferManager;$(ProjectDir)/Managers/ModelManager;$(ProjectDir)/Managers/TextureManager;$(ProjectDir)/Managers/SceneManager;$(ProjectDir)/Managers/PipelineManager;$(ProjectDir)/Managers/ImGuiManager;$(ProjectDir)/Lib/Camera2D;$(ProjectDir)/Lib/Camera3D;$(ProjectDir)/Lib/Matrix;$(ProjectDir)/Lib/Vector;$(ProjectDir)/Lib/ComPtr;$(ProjectDir)/Lib/Logger;$(ProjectDir)/DXLib/PunctualLight;$(ProjectDir)/DXLib/VertexResource;$(ProjectDir)/DXLib/CBufferStructure;$(ProjectDir)/DXLib/DXDepthStencil;$(ProjectDir)/DXLib/DXRasterizerState;$(ProjectDir)/DXLib/DXBlendState;$(ProjectDir)/DXLib/DXInputLayout;$(ProjectDir)/DXLib/DXRootSignature;$(ProjectDir)/DXLib/DXSwapChain;$(ProjectDir)/DXLib/DXDescriptor;$(ProjectDir)/DXLib/DXInclude;$(ProjectDir)/DXLib/DXDevice;$(ProjectDir)/DXLib/DXObject;$(ProjectDir)/Base/Object;$(ProjectDir)/Base/Engine;$(ProjectDir)/Base/DXCommon;$(ProjectDir)/Base/WinApp;$(ProjectDir)/Externals/assimp/include;$(ProjectDir)/Externals/DirectXTex;$(ProjectDir)/Externals/imgui</AdditionalIncludeDirectories>
       <TreatWarningAsError>true</TreatWarningAsError>
     </ClCompile>
     <Link>
@@ -105,6 +105,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Base\DXCommon\DXCommon.cpp" />
     <ClCompile Include="Base\Engine\Engine.cpp" />
     <ClCompile Include="2D\Object2D\Object2D.cpp" />
+    <ClCompile Include="Managers\ConstBufferManager\ConstBufferManager.cpp" />
     <ClCompile Include="Lib\Camera2D\Camera2D.cpp" />
     <ClCompile Include="Base\Object\Object.cpp" />
     <ClCompile Include="3D\Model\Model.cpp" />
@@ -149,6 +150,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Base\WinApp\WinApp.h" />
     <ClInclude Include="Base\Engine\Engine.h" />
     <ClInclude Include="2D\Object2D\Object2D.h" />
+    <ClInclude Include="Managers\ConstBufferManager\ConstBufferManager.h" />
     <ClInclude Include="DXLib\PunctualLight\PunctualLight.h" />
     <ClInclude Include="Lib\Camera2D\Camera2D.h" />
     <ClInclude Include="Base\Object\Object.h" />
